# syvel-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml  publish.yml
examples/: django_validator.py  fastapi_dependency.py  flask_extension.py
src/syvel/: __init__.py  _http.py  async_client.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_async_client.py  test_client.py  test_integration.py
