[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syvel"
dynamic = ["version"]
description = "Disposable email detection SDK for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "disposable email",
    "email validation",
    "email verification",
    "spam detection",
    "syvel",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27.0"]

[project.urls]
Homepage = "https://www.syvel.io"
Documentation = "https://www.syvel.io/docs/integrations/python"
Repository = "https://github.com/syvel-io/syvel-python"
"Bug Tracker" = "https://github.com/syvel-io/syvel-python/issues"
Changelog = "https://github.com/syvel-io/syvel-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
]

[tool.hatch.version]
path = "src/syvel/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/syvel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=syvel --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["src/syvel"]
omit = ["src/syvel/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/syvel"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN401"]
